# ViziClaw

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
.gemini/: style-guide.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-response.yml  docker.yml  release.yml
dev/: README.md  cli.sh  config.template.toml  docker-compose.yml
docs/: pr-workflow.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
src/: identity.rs  lib.rs  main.rs  migration.rs  util.rs
src/agent/: loop_.rs  mod.rs
src/channels/: discord.rs  email_channel.rs  irc.rs  mod.rs  telegram.rs  whatsapp.rs
src/config/: schema.rs
src/cron/: mod.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
src/heartbeat/: engine.rs
src/integrations/: mod.rs
src/observability/: otel.rs
src/onboard/: wizard.rs
src/providers/: anthropic.rs  compatible.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/runtime/: docker.rs  native.rs
src/security/: secrets.rs
src/service/: mod.rs
src/skillforge/: integrate.rs  mod.rs  (+1 more)
tauri-app/: dev.sh  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  events.rs  main.rs  session.rs  streaming.rs
tests/: dockerignore_test.rs  memory_comparison.rs  whatsapp_webhook_security.rs
(+22 files in other folders)
