[package]
name = "viziclaw-desktop"
version = "0.1.0"
edition = "2021"
description = "ViziClaw Desktop — Mission Control for your AI assistant"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
viziclaw = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1.0"
tracing = "0.1"
directories = "5.0"
